# recsys-streaming

./: .gitignore  Makefile  README.md  demo.ps1  docker-compose.yaml  run_containers.sh
.redis/: dump.rdb
.redis/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
generator/: Dockerfile  consumer.py  generator.ipynb  generator.py  requirements.txt
recsys-streaming/: docker-compose.yaml  docker-compose.yml
recsys-streaming-api/: .gitignore  Dockerfile  pyproject.toml  run.py
recsys-streaming-api/api/: config.py
recsys-streaming-api/api/engine/: schemas.py  utils.py  views.py
recsys-streaming-api/recsys_streaming_api/: config.py
recsys-streaming-api/recsys_streaming_api/db/: __init__.py  connection.py
recsys-streaming-api/recsys_streaming_api/engine/: __init__.py  utils.py  views.py
recsys-streaming-ml/: .envtemplate  Dockerfile  README.md  pyproject.toml  run.py  testing.py
recsys-streaming-ml/.model_repository/DeepFM/: config.pbtxt
recsys-streaming-ml/.model_repository/DeepFM/1/: model.pt
recsys-streaming-ml/notebooks/: data_processing.ipynb  model_loading.ipynb  spark.ipynb  triton.ipynb
recsys-streaming-ml/recsys_streaming_ml/: config.py  streaming.py
recsys-streaming-ml/recsys_streaming_ml/api/: run.py  views.py
recsys-streaming-ml/recsys_streaming_ml/data/: __init__.py  download_data.py  extract_presentation_data.py  insert_in_db.py  process_data.py  user_actions_loader.py  utils.py
recsys-streaming-ml/recsys_streaming_ml/db/: __init__.py  connection.py  crud.py  redis.py  redis_client.py
recsys-streaming-ml/recsys_streaming_ml/model/: __init__.py  evaluate.py  model.py  train.py  utils.py
recsys-streaming-ml/recsys_streaming_ml/spark/: stream_recommendations.py  stream_users_actions.py  utils.py
recsys-streaming-ml/scripts/: download_data.sh  evaluate.sh  train.sh
recsys-streaming/kafka/: README.md  docker-compose.yml  download-kafka.sh
recsys-streaming/kafka/kafka-docker/: Dockerfile
recsys-streaming/kafka/mock-recommendations-producer/: Dockerfile
recsys-streaming/kafka/mock-recommendations-producer/app/: config.py  main.py
recsys-streaming/kafka/mock-recommendations-producer/app/mock_data/: users_ids.jsonl
recsys-streaming/kafka/mock-user-actions-producer/app/: config.py  main.py
recsys-streaming/kafka/mock-user-actions-producer/app/mock_data/: users_actions.jsonl
recsys-streaming/mock-producers/: Dockerfile  pyproject.toml  run.py
recsys-streaming/mock-producers/mock_data/: users_actions.jsonl
