[tool.poetry]
name = "recsys-streaming-api"
version = "0.0.0"
description = "Recommender System Rest API"
authors = ["Milosz <milosz.hanczyk01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "^0.111.0"
torch = "^2.3.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"