[tool.poetry]
name = "recsys-streaming-ml"
version = "0.0.0"
description = "Recommender System Model"
authors = ["Milosz <milosz.hanczyk01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "1.26.0"
pandas = "2.1.1"
torch = [
    {version = "2.0.1", source = "pytorch", platform = "win32"},
    { url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.3.0%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl#sha256=896e8a82f441ff8ae5c8acd2fddd48d9ae1f2738fb8c083b912debbbe09c553b", platform = "linux"}
]
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.2"
pymongo = "^4.7.2"
requests = "^2.31.0"
pyspark = { extras = ["sql"], version="3.5.1" }
kafka-python = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
ruff = "^0.4.3"
jupyterlab = "^4.0.7"

[tool.poetry.scripts]
download-data = "recsys_streaming_ml.data.download_data:run"
process-data = "recsys_streaming_ml.data.process_data:run"
train = "recsys_streaming_ml.model.train:run"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"