[tool.poetry]
name = "recsys-streaming-ml"
version = "0.0.0"
description = "Recommender System Model"
authors = ["Milosz <milosz.hanczyk01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
requests = "^2.31.0"
numpy = "1.26.0"
pandas = "2.1.1"
openpyxl = "^3.1.2"
pyarrow = "16.1.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
python-dotenv = "^1.0.1"
pymongo = "^4.7.2"
kafka-python = "^2.0.2"
torch = [
    {version = "2.0.1", source = "pytorch", platform = "win32"},
    {version = "2.0.1", source = "pytorch-cpu", platform = "linux"}
    #{ url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl#sha256=2166d8bf3977874c8d64a67e1173d603948cde5cfa2e9f73c6d1f7b2856599eb", platform = "linux"}
]
# pyspark = "3.5.1"



[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
ruff = "^0.4.3"
jupyterlab = "^4.0.7"

[tool.poetry.scripts]
download-data = "recsys_streaming_ml.data.download_data:run"
process-data = "recsys_streaming_ml.data.process_data:run"
train = "recsys_streaming_ml.model.train:run"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"