[tool.poetry]
name = "recsys-streaming-ml"
version = "0.0.0"
description = "Recommender System Model"
authors = ["Milosz <milosz.hanczyk01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
requests = "^2.32.2"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
python-dotenv = "^1.0.1"
pymongo = "^4.7.2"
redis = "^3.5.3"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
ruff = "^0.4.3"
jupyterlab = "^4.0.7"

[tool.poetry.scripts]
download-data = "recsys_streaming_ml.data.download_data:run"
process-data = "recsys_streaming_ml.data.process_data:run"
train = "recsys_streaming_ml.model.train:run"
stream_users_actions = "recsys_streaming_ml.spark.stream_users_actions:run"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"